--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "lint-staged": "^10.2.11",
     "nodemon": "^2.0.4",
     "prettier": "2.0.5",
-    "ts-node": "^8.10.2"
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.3"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
@@ -66,7 +67,6 @@
     "jsonwebtoken": "^8.5.1",
     "next": "^9.5.4",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "typescript": "^3.9.3"
+    "react-dom": "^16.13.1"
   }
 }
