--- a/package.json
+++ b/package.json
@@ -51,12 +51,15 @@
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-context": "^1.0.20",
+    "apollo-server": "^2.18.2",
     "apollo-server-express": "^2.14.2",
     "apollo-upload-client": "^14.1.1",
+    "bcrypt": "^5.0.0",
     "classnames": "^2.2.6",
     "compression": "^1.7.4",
     "copyfiles": "^2.3.0",
     "cors": "^2.8.5",
+    "dataloader": "^2.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.0.0",
@@ -65,6 +68,8 @@
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-simple": "^0.5.6",
+    "mongodb": "^3.6.2",
     "next": "^9.5.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
