--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
   },
   "homepage": "https://github.com/dashboardphilippines/boilerplate-fullstack#readme",
   "devDependencies": {
+    "@types/apollo-upload-client": "^8.1.3",
+    "@types/classnames": "^2.2.10",
     "@types/compression": "^1.7.0",
     "@types/express": "^4.17.6",
     "@types/helmet": "0.0.47",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/node": "^14.0.9",
-    "@types/apollo-upload-client": "^8.1.3",
-    "@types/classnames": "^2.2.10",
     "@types/isomorphic-fetch": "0.0.35",
     "@types/js-cookie": "^2.2.6",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "^14.11.8",
     "@types/react": "^16.9.44",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
@@ -48,6 +48,8 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.10.0",
+    "@mikro-orm/core": "^4.0.7",
+    "@mikro-orm/mongodb": "^4.0.7",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-context": "^1.0.20",
