--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "next": "^9.5.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "recharts": "^1.8.5"
+    "recharts": "^1.8.5",
+    "unique-names-generator": "^4.3.1"
   }
 }
